test/data/semantic-errors/type-mismatch-argument-input.ava
var x = "hello";

var thisFunction = function (x:int) -> return x + 1; end;

thisFunction(x);